--- a/src/components/landing.module.scss
+++ b/src/components/landing.module.scss
@@ -37,7 +37,7 @@ main.landing-container {
 
         section.landing-content-container { /* wraps logo, txtbox & button */
         width: 100%;
-        margin: 12vh auto;
+        margin: 8vh auto;
         text-align: center;
         padding: 2vh auto;
         
@@ -100,22 +100,26 @@ main.landing-container {
 
         section.landing-content-container { /* wraps logo, txtbox & button */
             width: 80%;
-            margin-top: 12vh;
+            margin-top: 4vh;
             text-align: center;
             padding: 2vh auto;
+            img {
+                display: block;
+                width: 30%;
+                margin: 1vh auto;
+            }
             .text-container {
+                margin: 2vh auto;
                 h2 {
                     font-size: 3rem;
                 }
                 p {
-                    font-size: 2rem;
-                    // margin-bottom: 0;
-                    line-height: 1.3;
+                    font-size: 1.5rem;
+                    line-height: 1.2;
                 }
             }
-            img {
-                width: 20%;
-                margin: 2vh auto;
+            button {
+                margin-top: 1vh;
             }
         }
     }
